Tests/errors/jumpOutBlock.scisl
print 0
def fnc
jmp outside
endblock
label outside